--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,26 @@
             android:theme="@style/Theme.C196"
             tools:targetApi="31">
         <activity
+                android:name=".AssesmentsDetails"
+                android:exported="false"/>
+        <activity
+                android:name=".Assesments"
+                android:exported="false"/>
+        <activity
+                android:name=".CoursesDetails"
+                android:exported="false"/>
+        <activity
+                android:name=".Courses"
+                android:exported="false"/>
+        <activity
+                android:name=".TermsDetails"
+                android:exported="false"
+                android:label="@string/title_activity_terms_details"
+                android:theme="@style/Theme.C196.NoActionBar"/>
+        <activity
+                android:name=".Terms"
+                android:exported="false"/>
+        <activity
                 android:name=".MainActivity"
                 android:exported="true">
             <intent-filter>
