--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,7 @@
                 android:exported="false"/>
         <activity
                 android:name=".TermsDetails"
-                android:exported="false"
-                android:label="@string/title_activity_terms_details"
-                android:theme="@style/Theme.C196.NoActionBar"/>
+                android:exported="false"/>
         <activity
                 android:name=".Terms"
                 android:exported="false"/>
