--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
             android:theme="@style/Theme.C196"
             tools:targetApi="31">
         <activity
+                android:name=".CoursesAdd"
+                android:exported="false"/>
+        <activity
+                android:name=".TermsAdd"
+                android:exported="false"/>
+        <activity
                 android:name=".AssessmentsDetails"
                 android:exported="false"
                 android:label="Assessments Detail"
@@ -40,8 +46,8 @@
                 android:parentActivityName=".Terms"/>
         <activity
                 android:name=".Terms"
-                android:label="Terms"
                 android:exported="false"
+                android:label="Terms"
                 android:parentActivityName=".MainActivity"/>
         <activity
                 android:name=".MainActivity"
