--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
             android:theme="@style/Theme.C196"
             tools:targetApi="31">
         <activity
+                android:name=".AssessmentsAdd"
+                android:exported="false"/>
+        <activity
                 android:name=".CoursesAdd"
                 android:exported="false"/>
         <activity
