--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,17 +14,25 @@
             android:theme="@style/Theme.C196"
             tools:targetApi="31">
         <activity
-                android:name=".CoursesNotes"
-                android:exported="false"/>
+                android:name=".NotesAdd"
+                android:exported="false"
+                android:parentActivityName=".Courses"/>
+        <activity
+                android:name=".NotesDetails"
+                android:exported="false"
+                android:parentActivityName=".Courses"/>
         <activity
                 android:name=".AssessmentsAdd"
-                android:exported="false"/>
+                android:exported="false"
+                android:parentActivityName=".Assessments"/>
         <activity
                 android:name=".CoursesAdd"
-                android:exported="false"/>
+                android:exported="false"
+                android:parentActivityName=".Courses"/>
         <activity
                 android:name=".TermsAdd"
-                android:exported="false"/>
+                android:exported="false"
+                android:parentActivityName=".Terms"/>
         <activity
                 android:name=".AssessmentsDetails"
                 android:exported="false"
