--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.C196"
             tools:targetApi="31">
+        <receiver
+                android:name=".MyReceiver"
+                android:enabled="true"
+                android:exported="true">
+        </receiver>
+
         <activity
                 android:name=".NotesAdd"
                 android:exported="false"
